--- a/classic/permutations.ipynb
+++ b/classic/permutations.ipynb
@@ -81,6 +81,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aaa', 'baa', 'caa', 'aba', 'bba', 'cba', 'aca', 'bca', 'cca', 'aab', 'bab', 'cab', 'abb', 'bbb', 'cbb', 'acb', 'bcb', 'ccb', 'aac', 'bac', 'cac', 'abc', 'bbc', 'cbc', 'acc', 'bcc', 'ccc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using k-ary numbers\n",
+    "def combine(x):\n",
+    "    out = []\n",
+    "    k = len(x)\n",
+    "    for i in range(k**k):\n",
+    "        token = i\n",
+    "        word = ''\n",
+    "        for j in range(k):\n",
+    "            digit = token % k\n",
+    "            word += x[digit]\n",
+    "            token = (token - digit) // k\n",
+    "        out.append(word)\n",
+    "    return out\n",
+    "\n",
+    "print(combine('abc'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -93,21 +124,22 @@
     }
    ],
    "source": [
+    "# With manualmovement of pointers (also k-nary arithmetic, but manual)\n",
     "def combine(x):\n",
     "    out = []\n",
     "    k = len(x)\n",
-    "    pointers = [k-1]*k    \n",
+    "    pointers = [k-1]*k              # Set pointers for each position to the last element (we'll be subtracting)   \n",
     "    while True:        \n",
     "        out.append(''.join([x[i] for i in pointers]))\n",
-    "        i = k-1 # pointer to change, set to the last one\n",
-    "        while i>=0:\n",
-    "            if pointers[i]>0:\n",
+    "        i = k-1                     # i = which pointer to change; set to the last one in the beginning\n",
+    "        while i>=0:                 # While we didn't run out of pointers...\n",
+    "            if pointers[i]>0:       # If there's something to subtract, subtract and be happy.\n",
     "                pointers[i] -= 1\n",
     "                break\n",
-    "            else: # (pointer===0)\n",
-    "                pointers[i] = k-1\n",
-    "                i -= 1\n",
-    "        if i<0: # We zeroed all pointers and ran out of options, so we're done\n",
+    "            else:                   # if this pointer cannot be decremented (pointer===0)   \n",
+    "                pointers[i] = k-1   # .. reset it to last element\n",
+    "                i -= 1              # and shift to previous pointer\n",
+    "        if i<0:                     # We zeroed all pointers and ran out of options, so we're done\n",
     "            break\n",
     "    return out\n",
     "\n",
@@ -116,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
