Zoom grader: now saving piazza messages

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -358,7 +358,7 @@
     "# NOTE: There's no safety check on the content of TXT files, so no other TXT files are allowed in this folder!\n",
     "# In each page, identify responses, and count special marks.\n",
     "\n",
-    "df_piazza = pd.DataFrame(columns=['name', 'work', 'grade'])\n",
+    "df_piazza = pd.DataFrame(columns=['name', 'work', 'grade', 'message'])\n",
     "cool = '🔥💡💎'\n",
     "rejected = '🛑'\n",
     "splitter = 'Resolved Unresolved'\n",
@@ -372,7 +372,10 @@
     "    print(fname, ':', title)\n",
     "    \n",
     "    messages = s.split(splitter)[1:]  # Skip the homework itself (number 0)\n",
-    "    for message in messages:        \n",
+    "    for message in messages:\n",
+    "        first = max(0, message.find('days ago')+9)\n",
+    "        last  = message.find('\\nhelpful! ')        \n",
+    "        \n",
     "        grade = ''\n",
     "        for emoji in cool:\n",
     "            if emoji in message:\n",
@@ -382,7 +385,8 @@
     "                grade = 'bad'\n",
     "        for name in people_piazza.name:        \n",
     "            if name in message:\n",
-    "                df_piazza = df_piazza.append({'name': name, 'work':title, 'grade':grade}, ignore_index=True)"
+    "                df_piazza = df_piazza.append({'name': name, 'work':title, 'grade':grade,\n",
+    "                                              'message':message[first:last]}, ignore_index=True)"
    ]
   },
   {
@@ -393,7 +397,11 @@
    "source": [
     "# Look at one student\n",
     "\n",
-    "df_piazza[df_piazza.name.str.match('John')]"
+    "q = df_piazza[df_piazza.name.str.match('John')]\n",
+    "q\n",
+    "\n",
+    "#for i in range(q.shape[0]):\n",
+    "#    print(q.message.iloc[i], end='\\n---------\\n')"
    ]
   },
   {
@@ -432,7 +440,7 @@
    "outputs": [],
    "source": [
     "# One student\n",
-    "dfsp[dfsp.name.str.match('John')]"
+    "dfsp[dfsp.name.str.match('Nad')]"
    ]
   },
   {
