zoom grader - new version

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -73,21 +73,22 @@
     "file_list = os.listdir(folder_name)\n",
     "print(\"Total files: \",len(file_list))\n",
     "\n",
-    "processed_list = set()\n",
+    "processed_set = set()\n",
+    "processed_dict = {}\n",
     "for fname in file_list:\n",
     "    if fname[-3:]!='csv':\n",
-    "        continue # Ignore everything that is not a zoom log\n",
+    "        continue # Ignore everything that is not a csv\n",
     "    fullname = folder_name + fname\n",
     "    header = pd.read_csv(fullname, header=0, nrows=1) # Attempt to read the header\n",
     "    if 'Topic' not in header.columns: # Not a zoom log, skip this one\n",
     "        continue\n",
     "    name = header['Topic'][0]    \n",
     "    datestring = header['Start Time'][0][:10]\n",
-    "    # print(name, datestring)\n",
-    "    if name+datestring in processed_list:\n",
-    "        print('Duplicated meeting:', name+datestring, fname)\n",
+    "    if name+datestring in processed_set:\n",
+    "        print(f\"Duplicated meeting: {name+datestring} ({fname}) already saved as {processed_dict[name+datestring]}\")\n",
     "        continue  # This meeting\n",
-    "    processed_list.add(name+datestring)\n",
+    "    processed_set.add(name+datestring)\n",
+    "    processed_dict[name+datestring] = fname\n",
     "    \n",
     "    data = pd.read_csv(fullname, header=2)\n",
     "    data['Date'] = datestring\n",
@@ -114,7 +115,8 @@
     "               'Date':'date'}, axis=1)\n",
     "meeting_dict = {'Biosem Zoom': 'Biosem', \n",
     "                'Biosem_spring_2021': 'Biosem',\n",
-    "                'Neuroscience': 'Neuro'}\n",
+    "                'Neuroscience': 'Neuro',\n",
+    "                'Computational Neuro': 'Comput'}\n",
     "df['meeting'] = df['meeting'].replace(meeting_dict)\n",
     "df.name = df.name.str.title()  # Capitalize names (for consistency)"
    ]
@@ -126,6 +128,7 @@
    "outputs": [],
    "source": [
     "# Inexplicably, some total participation counts are stored as strings, not numbers\n",
+    "# So correct that.\n",
     "\n",
     "df.loc[df.minutes=='Yes'] = 0 # No idea what it means, but Zoom outputed it!!!\n",
     "ind = [type(a)!=int for a in df.minutes.values]\n",
@@ -152,6 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Participation length histogram\n",
     "plt.figure(figsize=(10,3))\n",
     "plt.subplot(121)\n",
     "plt.hist(df.loc[df.meeting=='Biosem'].minutes.values, bins=50);\n",
@@ -167,9 +171,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Only analyze one meeting starting from here\n",
+    "# Only analyze one type of meetings starting from here\n",
     "\n",
-    "target_meeting = 'Biosem'\n",
+    "target_meeting = 'Neuro' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
     "df = df[df.meeting==target_meeting]"
    ]
   },
@@ -219,6 +223,7 @@
     "dfm = dfm.groupby(['date', 'meeting']).agg({'minutes': sum}).reset_index()\n",
     "dfm = dfm.rename({'minutes':'people'}, axis=1)\n",
     "dfm.date = pd.to_datetime(dfm.date)\n",
+    "print(\"Meetings so far:\", dfm.shape[0])\n",
     "\n",
     "plt.figure(figsize=(9,2))\n",
     "plt.plot(dfm.date.dt.dayofyear, dfm.people, '.');\n",
@@ -235,29 +240,7 @@
    "outputs": [],
    "source": [
     "# Check if there are any entries without email at all\n",
-    "# df[[len(a)<10 for a in df.email]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find people with emails that aren't on the official list\n",
-    "# Output them, to manually create a list of alt-emails.\n",
-    "\n",
-    "df_lost = (df           \n",
-    "           .groupby(['name','email'])\n",
-    "           .agg({'minutes': sum})\n",
-    "           .reset_index()\n",
-    "           .merge(people, on='email', how='left', suffixes=['', '_r']) # Ignore official name (_r)\n",
-    "           .drop(columns='name_r')           \n",
-    "           .query('id.isna()', engine='python') # Only keep unrecognized users\n",
-    "          )\n",
-    "print('Rows found:', len(df_lost.id))\n",
-    "#print('\\n'.join([a for a in df_lost['name'] + ',' + df_lost['email']])) # Output csv\n",
-    "# df_lost # Output nice human-readable form"
+    "df[[len(a)<10 for a in df.email]]"
    ]
   },
   {
@@ -280,8 +263,38 @@
     "# Substitute 'wrong' emails with 'official' emails where available\n",
     "ind = (df_fixed.real_email.notna())\n",
     "df_fixed.loc[ind, 'email'] = df_fixed.loc[ind, 'real_email']\n",
-    "df_fixed = df_fixed.drop(columns='real_email')\n",
+    "df_fixed = df_fixed.drop(columns='real_email')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find people with emails that aren't on the official list\n",
+    "# Output them, to manually create a list of alt-emails (that will be )\n",
     "\n",
+    "df_lost = (df_fixed           \n",
+    "           .groupby(['name','email'])\n",
+    "           .agg({'minutes': sum})\n",
+    "           .reset_index()\n",
+    "           .merge(people, on='email', how='left', suffixes=['', '_r']) # Ignore official name (_r)\n",
+    "           .drop(columns='name_r')           \n",
+    "           .query('id.isna()', engine='python') # Only keep unrecognized users\n",
+    "          )\n",
+    "print('Rows found:', len(df_lost.id))\n",
+    "#print('\\n'.join([a for a in df_lost['name'] + ',' + df_lost['email']])) # Output csv\n",
+    "\n",
+    "#df_lost # Output nice human-readable form"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Lookup correct names, and drop all users who are not on bip\n",
     "df_fixed = (df_fixed\n",
     "            .merge(people, on='email', how='left', suffixes=['_l', '']) # This time keep official names only\n",
@@ -322,8 +335,9 @@
     "token = 'yyy'\n",
     "out = (df_meetings\n",
     "       .merge(df_fixed.loc[df_fixed.name.str[:len(token)] == token], on='date', how='left')\n",
-    "       .sort_values(by='date'))\n",
-    "# out"
+    "       .sort_values(by='date')\n",
+    "       .query('minutes.notna()', engine='python'))\n",
+    "out"
    ]
   },
   {
@@ -437,7 +451,7 @@
     "dfsp.good  = dfsp.good.astype(int)\n",
     "dfsp.bad   = dfsp.bad.astype(int)\n",
     "\n",
-    "#dfsp"
+    "# dfsp"
    ]
   },
   {
@@ -473,6 +487,7 @@
    "outputs": [],
    "source": [
     "# How many missed assignments are problematic?\n",
+    "# For Neuro this semester we seem to have 34 classes and 21 homework\n",
     "\n",
     "print('Can miss classes, and still pass:', 0.2*34)\n",
     "print('Can miss classes, and still get a B:', 0.1*34)\n",
@@ -488,12 +503,68 @@
    "source": [
     "# At-risk students\n",
     "\n",
-    "classes_so_far = 9\n",
-    "works_so_far = 6\n",
+    "classes_so_far = 17\n",
+    "works_so_far = 10\n",
     "df_at_risk = df_full.query('total-bad < @works_so_far-1 | check < @classes_so_far-3')\n",
     "\n",
     "# print(','.join([e for e in df_at_risk.email]))\n",
-    "# df_at_risk"
+    "df_at_risk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grades\n",
+    "\n",
+    "df_full['grade'] = 'B'\n",
+    "df_full.grade = df_full.grade.where(~(df_full.check < classes_so_far-3), 'C')\n",
+    "df_full.grade = df_full.grade.where(~(df_full.check < classes_so_far-6), 'F')\n",
+    "df_full.grade = df_full.grade.where(~(df_full.total < works_so_far-2), 'C')\n",
+    "df_full.grade = df_full.grade.where(~(df_full.total < works_so_far-4), 'F')\n",
+    "df_full.grade = df_full.grade.where(~((df_full.good > 2) & (df_full.grade=='B')), 'A')\n",
+    "df_full.grade = df_full.grade.where(~((df_full.good > 1) & (df_full.grade=='B')), 'B+')\n",
+    "df_full.head(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = np.where(df_full.name_piazza.str.match('Mi'))[0]\n",
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Letter writer\n",
+    "\n",
+    "i = 39\n",
+    "sec = df_full.iloc[i]\n",
+    "sec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Dear {sec.name_piazza.split()[0]},\")\n",
+    "print(f\"you have attended {np.round(sec.check).astype(int)} classes \")\n",
+    "print(f\"(out of {classes_so_far} that we had so far), \")\n",
+    "print(f\"and submitted {sec.total} homeworks (out of {works_so_far} that we had)\")\n",
+    "if sec.good>0:\n",
+    "    print(f\"{sec.good} of these homeworks were really good! (and others were also fine :)\")\n",
+    "print(f\"With this in mind, your current technically projected grade is {sec.grade}\")"
    ]
   },
   {
@@ -504,26 +575,6 @@
    "source": [
     "# Ouput the summary csv\n",
     "#recognized.to_csv(folder_name + '../attendance_summary.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print('\\n'.join(df2.loc[df2.meeting==\"Neuro\"].sort_values(by='name').name.tolist()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# df2.loc[df2.meeting=='Neuro'].sort_values(by='name').drop(columns=['meeting', 'email'])"
    ]
   }
  ],
