citation analysis: better annotation

--- a/sproj_liam/birds_literature.ipynb
+++ b/sproj_liam/birds_literature.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 0: Loading and pre-processing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -342,12 +349,20 @@
     }
    ],
    "source": [
-    "# Normalizing\n",
+    "# Normalizing + transposing\n",
+    "# (now each bird is a row, and each co-species is a column)\n",
     "\n",
-    "p1 = (counts1/birds_alone)/species_alone[:,np.newaxis]\n",
-    "plt.imshow(p1.T);\n",
+    "p1 = ((counts1/birds_alone)/species_alone[:,np.newaxis]).T\n",
+    "plt.imshow(p1);\n",
     "\n",
     "# Interaction with plants is much weaker, which is kinda expected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 1: Fancy (failed) analysis"
    ]
   },
   {
@@ -392,8 +407,8 @@
     "        # Read here if it doesn't work at all: https://github.com/Phlya/adjustText\n",
     "\n",
     "pca = decomposition.PCA(n_components=2)\n",
-    "pca.fit(p1.T)\n",
-    "scores = pca.transform(p1.T)\n",
+    "pca.fit(p1)\n",
+    "scores = pca.transform(p1)\n",
     "\n",
     "plt.figure(figsize=(7, 7))\n",
     "plt.plot(scores[:,0], scores[:,1], '.');\n",
@@ -403,6 +418,13 @@
     "loadings = pca.inverse_transform(np.array(np.eye(2))).T\n",
     "plt.plot(loadings[:,0], loadings[:,1], '.');\n",
     "draw_labels(loadings, df_species.name, adjust=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2: Simple (and more sane) analysis"
    ]
   },
   {
@@ -426,7 +448,7 @@
    "source": [
     "# Sort birds by the level of their involvement with all species\n",
     "\n",
-    "rating = np.sum(p1.T, axis=1)\n",
+    "rating = np.sum(p1, axis=1)\n",
     "ind = np.argsort(rating)\n",
     "plt.figure(figsize=(6,5))\n",
     "plt.barh(df_birds.name[ind], rating[ind]);\n",
@@ -456,8 +478,8 @@
     "# Let's manually classify them as \"tree-friends\" vs \"animal-friends\"\n",
     "\n",
     "ind_first_tree = 20\n",
-    "rating1 = np.sum(p1[:ind_first_tree, :].T, axis=1)\n",
-    "rating2 = np.sum(p1[ind_first_tree:, :].T, axis=1)\n",
+    "rating1 = np.sum(p1[:, :ind_first_tree], axis=1)\n",
+    "rating2 = np.sum(p1[:, ind_first_tree:], axis=1)\n",
     "\n",
     "plt.figure(figsize=(7,7))\n",
     "ax = plt.axes()\n",
@@ -472,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 2, terms"
+    "# Part 3: Association of birds with fancy terminology"
    ]
   },
   {
@@ -503,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
