--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -97,7 +97,7 @@
     "    \n",
     "    df = df.append(data, ignore_index=True)\n",
     "\n",
-    "print('Meeting files:', len(processed_list))"
+    "print('Meeting files:', len(processed_set))"
    ]
   },
   {
@@ -184,7 +184,13 @@
    "outputs": [],
    "source": [
     "# Check individual records of needed\n",
-    "df.loc[df.name.str.match('Johnn')]"
+    "token = 'Ell'\n",
+    "all_meetings = df.groupby('date').agg({'name':'count'}).reset_index()\n",
+    "partial = df.loc[df.name.str.match(token)]\n",
+    "out = all_meetings[['date']].merge(partial, on='date', how='left')[['date','name','email','minutes','check']]\n",
+    "out.loc[out.check.isna(),'check'] = 0\n",
+    "print(sum(out.check))\n",
+    "out"
    ]
   },
   {
@@ -508,7 +514,7 @@
     "df_at_risk = df_full.query('total-bad < @works_so_far-1 | check < @classes_so_far-3')\n",
     "\n",
     "# print(','.join([e for e in df_at_risk.email]))\n",
-    "df_at_risk"
+    "#df_at_risk"
    ]
   },
   {
@@ -526,7 +532,7 @@
     "df_full.grade = df_full.grade.where(~(df_full.total < works_so_far-4), 'F')\n",
     "df_full.grade = df_full.grade.where(~((df_full.good > 2) & (df_full.grade=='B')), 'A')\n",
     "df_full.grade = df_full.grade.where(~((df_full.good > 1) & (df_full.grade=='B')), 'B+')\n",
-    "df_full.head(200)"
+    "#df_full.head(200)"
    ]
   },
   {
@@ -535,8 +541,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = np.where(df_full.name_piazza.str.match('Mi'))[0]\n",
-    "i"
+    "def response(df_full, df_piazza, i):\n",
+    "    # Write a full response for one student\n",
+    "    \n",
+    "    sec = df_full.iloc[i]\n",
+    "    name = sec.name_piazza\n",
+    "    \n",
+    "    missing_work = (df_piazza\n",
+    "                  .groupby(['work', 'name'])\n",
+    "                  .agg({'message':'count'})\n",
+    "                  .reset_index()\n",
+    "                  .pivot_table(index='work', columns='name', values='message')\n",
+    "                  .reset_index()\n",
+    "                  [['work', name]]\n",
+    "                  .set_axis(['work', 'name'], axis=1, inplace=False)\n",
+    "                  .query('name.isna()', engine='python')\n",
+    "                  .work\n",
+    "                  .tolist()\n",
+    "                 )\n",
+    "    \n",
+    "    def remove_double_spaces(s):\n",
+    "        s = s.replace('\\n', ' ')\n",
+    "        return ' '.join([c for c in s.split(' ') if c])\n",
+    "    \n",
+    "    print(f\"Dear {sec.name_piazza.split()[0]},\")\n",
+    "    print(f\"you have attended {np.round(sec.check).astype(int)} classes \", end='')\n",
+    "    print(f\"(out of {classes_so_far} that we had so far), \")\n",
+    "    print(f\"and submitted {sec.total} homeworks (out of {works_so_far} that we had)\")   \n",
+    "    if sec.good>0:\n",
+    "        print(f\"{sec.good} of these homeworks were really good!! (and others were also fine :)\")\n",
+    "    if sec.total < works_so_far:\n",
+    "        print(f\"(Works that are missing: {'; '.join(missing_work)})\")\n",
+    "    print(f\"With this in mind, your current technically projected grade is {sec.grade}\")\n",
+    "    if sec.total < works_so_far:\n",
+    "        message = \"\"\"If you want to improve, you can submit missing homeworks. \n",
+    "              For missed lab work, just do the lab, and submit your work, as described in the assignment. \n",
+    "              For missed questions, at this point the assignment is a bit different.\n",
+    "              You will need to answer the following question: \n",
+    "              'What is the most interesting thing that you learned that week, and what makes it interesting to you?''. \n",
+    "              I would expect about a paragraph of text, with explicit references to what you learned from \n",
+    "              videos and readings, and to what we discussed in class. Additional sources are also welcome!\"\"\"\n",
+    "        print(remove_double_spaces(message))"
    ]
   },
   {
@@ -545,11 +590,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Letter writer\n",
-    "\n",
-    "i = 39\n",
-    "sec = df_full.iloc[i]\n",
-    "sec"
+    "i = np.where(df_full.name_piazza.str.match('Ell'))[0][0]\n",
+    "response(df_full, df_piazza, i)"
    ]
   },
   {
@@ -558,13 +600,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Dear {sec.name_piazza.split()[0]},\")\n",
-    "print(f\"you have attended {np.round(sec.check).astype(int)} classes \")\n",
-    "print(f\"(out of {classes_so_far} that we had so far), \")\n",
-    "print(f\"and submitted {sec.total} homeworks (out of {works_so_far} that we had)\")\n",
-    "if sec.good>0:\n",
-    "    print(f\"{sec.good} of these homeworks were really good! (and others were also fine :)\")\n",
-    "print(f\"With this in mind, your current technically projected grade is {sec.grade}\")"
+    "for i in range(df_full.shape[0]):\n",
+    "    response(df_full, df_piazza, i)\n",
+    "    print(\"\\n\")"
    ]
   },
   {
