--- a/classic/sorting_algos.ipynb
+++ b/classic/sorting_algos.ipynb
@@ -189,7 +189,7 @@
     "        if i>=mid:           # Left array is over, draw from the right\n",
     "            o.append(ar[j])\n",
     "            j += 1\n",
-    "        elif j>=len(ar):     # Right array is over, draf from the left\n",
+    "        elif j>=len(ar):     # Right array is over, draw from the left\n",
     "            o.append(al[i])\n",
     "            i += 1\n",
     "        elif al[i]<ar[j]:    # Both are fine: compare\n",
